--- a/style.css
+++ b/style.css
@@ -6,4 +6,69 @@
 
 body {
   font-family: sans-serif;
+  background-color: #EEEEEE;
+}
+
+.title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.title h1 {
+  font-size: 2.5rem;
+}
+
+.position {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.img-container {
+  display: flex;
+  align-items: center;
+  justify-content: center; 
+  background-color: aliceblue;
+  height: 40rem;
+  width: 90%;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.img {
+  display: flex;
+align-items: center;
+  justify-content: center;
+  height: 35rem;
+  width: 70%;
+ background-color: antiquewhite;
+}
+
+.extra-title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 2rem 0;
+}
+
+ul {
+  background-color: blue;
+  width: 100%;
+  height: auto;
+}
+
+li {
+  display: flex;
+  width: 50rem;
+  line-height: 2rem;
+  background-color: rgb(27, 81, 128);
+}
+
+ {
+  padding: 1rem 0;
 }
