--- a/styles.css
+++ b/styles.css
@@ -6,9 +6,6 @@
 
 body {
   font-family: sans-serif;
-}
-
-.project {
   position: relative;
 }
 
@@ -38,7 +35,7 @@ body {
 
 .title {
   width: 100vw;
-  height: 600px;
+  height: 100vh;
   background-color: rgba(0, 0, 0, 0.737);
   display: flex;
   flex-direction: column;
@@ -65,7 +62,7 @@ body {
 }
 
 .project {
-  background-color: rgb(83, 83, 165);
+  background-color: rgb(69, 86, 125);
   padding: 30px 0;
   text-align: center;
   padding-bottom: 90px;
@@ -77,18 +74,21 @@ body {
 
 .there {
   color: aliceblue;
+  text-align: center;
+  justify-content: center;
+  font-size: 2rem;
 }
 
-hr {
-  width: 480px;
-  margin-left: 29%;
+.white-line {
+  width: 600px;
+  margin-left: 30%;
 }
 
 .pictures {
   display: grid;
   grid-template-columns: 350px 350px 350px;
   grid-template-rows: auto;
-  margin-left: 30px;
+  justify-content: center;
   gap: 20px;
   margin-top: 40px;
 }
@@ -107,6 +107,7 @@ img {
   border: 1px solid rgba(23, 26, 41, 0.879);
   border-radius: 2px;
   font-size: large;
+  border: none;
 }
 
 .tugma:hover {
@@ -157,12 +158,128 @@ img {
   transition: 10ms;
 }
 
+.footer-title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 30rem;
+}
+
 .icons {
   height: 5rem;
-  background-color: #7f3636;
   display: flex;
-  gap: 20px;
+  gap: 40px;
   width: 97%;
   justify-content: center;
   align-items: center;
+  font-size: 1.1rem;
+  padding-bottom: 4rem;
 }
+
+.red-line {
+  background-color: rgb(214, 58, 58);
+  height: 0.2rem;
+  border: none;
+}
+
+.work {
+  font-size: 3.5rem;
+  color: rgb(209, 206, 206);
+  padding: 3rem 0;
+  display: flex;
+  align-items: flex-end;
+  justify-content: end;
+}
+
+.coffee {
+  color: rgb(217, 215, 215);
+}
+
+.bottom {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 7rem;
+  font-size: 1.2rem;
+  padding: 1.2rem 0;
+  color: rgb(217, 215, 215);
+}
+
+/* rem and em do NOT depend on html font-size in media queries! Instead, 1rem = 1em = 16px */
+
+/**************************/
+/* BELOW 1344px (Smaller desktops) */
+/**************************/
+
+@media (max-width: 84em) {
+}
+
+/**************************/
+/* BELOW 1200px (Landscape Tablets) */
+/**************************/
+
+@media (max-width: 75em) {
+  html {
+    /* 9px / 16px  */
+    font-size: 56.25%;
+  }
+}
+
+/**************************/
+/* BELOW 944px (Tablets) */
+/**************************/
+
+@media (max-width: 59em) {
+  html {
+    /* 8px / 16px = 0.5 = 50% */
+    font-size: 40%;
+  }
+}
+
+/**************************/
+/* BELOW 704px (Smaller tablets) */
+/**************************/
+
+@media (max-width: 44em) {
+}
+
+/**************************/
+/* BELOW 544px (Phones) */
+/**************************/
+
+@media (max-width: 34em) {
+  html {
+    font-size: 45%;
+  }
+  .nav-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .there {
+    font-size: 3.2rem;
+  }
+  .white-line {
+    width: 100%;
+    margin: 0;
+  }
+
+  .pictures {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .description {
+    font-size: 2rem;
+  }
+
+ 
+}
+/* 
+- Font sizes (px)
+10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
+- Spacing system (px)
+2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
+*/
